cambios en seccion profesores

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               </ul>
               <header>
                 <h2>Profesores</h2>
-                <p>descripcion de plataforma</p>
+                <p>descripcion de Profesores</p>
               </header>
               <!--<p>
                 Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus. Praesent semper mod quis eget
